Added Couchbase support via couch_potato

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,12 @@
 
 # Ignore bundler config
 /.bundle
+/bundler_stubs
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+/config/database*.yml
+/config/couchdb.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
